# kedro-hooks-test-project

./: README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
src/kedro_hooks_test/: __init__.py  nodes.py  pipeline.py  pipeline_registry.py  settings.py
tests/: test_smoke.py
