[project]
name = "kedro-hooks-test"
dynamic = ["version"]
description = "Dummy Kedro project to test kedro-psutil-telemetry hook autodetection"
keywords = ["kedro", "hooks", "testing"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "kedro>=0.19",
    "kedro-psutil-telemetry",
]

[tool.uv.sources]
kedro-psutil-telemetry = { path = "../kedro-psutil-telemetry", editable = true }

[project.urls]
Homepage = "https://github.com/saemeon/kedro-psutil-telemetry"
Repository = "https://github.com/saemeon/kedro-psutil-telemetry"

[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kedro_hooks_test = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/kedro_hooks_test --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "PERF"]
ignore = ["E203"]

[tool.kedro]
package_name = "kedro_hooks_test"
project_name = "kedro-hooks-test-project"
kedro_init_version = "1.2.0"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "bf5d598638994faf8dd9474fe486fdda"
